--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
 				<!-- Mobile Dropdown -->
 				<div id="mobile-menu" class="max-h-0 overflow-hidden transition-all duration-300 ease-in-out flex-col space-y-2 mt-2 font-medium px-4 py-0 md:hidden">
-					<a href="#home" class="block px-2 py-1 rounded-md hover:bg-white/10 transition-colors duration-200">Home</a>
+					<a href="#hero" class="block px-2 py-1 rounded-md hover:bg-white/10 transition-colors duration-200">Home</a>
+					<a href="#tentang" class="block px-2 py-1 rounded-md hover:bg-white/10 transition-colors duration-200">Tentang</a>
 					<a href="#anggota" class="block px-2 py-1 rounded-md hover:bg-white/10 transition-colors duration-200">Anggota</a>
 					<a href="#sosial" class="block px-2 py-1 rounded-md hover:bg-white/10 transition-colors duration-200">Sosial Media</a>
 					<a href="galeri.html" class="block px-2 py-1 rounded-md hover:bg-white/10 transition-colors duration-200">Galeri</a>
@@ -49,7 +50,7 @@
 					<h1 class="text-6xl font-bold mb-2 text-center">Teknik Komputer A</h1>
 					<h2 class="text-3xl font-bold mb-6 text-center">Angkatan 2022</h2>
 					<p class="text-xl mb-8 text-center max-w-2xl">Bersama Kita Belajar, Bersama Kita Tumbuh. Mari bergabung dalam perjalanan pembelajaran yang penuh inspirasi di Teknik Komputer A.</p>
-					<button onclick="document.getElementById('anggota').scrollIntoView({behavior: 'smooth'})" class="bg-white text-black px-8 py-3 rounded-button font-semibold hover:bg-opacity-90 transition-all flex items-center gap-2">
+					<button onclick="document.getElementById('tentang').scrollIntoView({behavior: 'smooth'})" class="bg-white text-black px-8 py-3 rounded-button font-semibold hover:bg-opacity-90 transition-all flex items-center gap-2">
 						<svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
 							<path stroke-linecap="round" stroke-linejoin="round" d="M13 17h8m0 0V9m0 8l-8-8-4 4-6-6"></path>
 						</svg>
@@ -58,6 +59,7 @@
 				</div>
 			</div>
 		</div>
+		<!-- Tentang Kelas -->
 		<section id="tentang" class="py-20 bg-gray-50 relative">
 			<div class="max-w-6xl mx-auto px-4">
 				<h2 class="text-4xl font-bold text-center text-primary mb-16">Tentang Kelas</h2>
@@ -79,7 +81,7 @@
 
 						<!-- Gambar (mobile bawah, desktop kanan) -->
 						<div class="md:w-5/12 mt-6 md:mt-0 order-1 md:order-2">
-							<img src="img/2022.jpg" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/NUSTEL.IN_12.JPG" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 					</div>
 
@@ -87,7 +89,7 @@
 					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
 						<!-- Gambar (mobile atas, desktop kiri) -->
 						<div class="md:w-5/12 order-2 md:order-1">
-							<img src="img/2023.jpg" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/NUSTEL.IN_15.JPG" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 
 						<!-- Titik Tengah -->
@@ -118,7 +120,11 @@
 				</div>
 			</div>
 		</section>
+		<section class="bg-white text-center py-16 px-6">
+			<blockquote class="max-w-2xl mx-auto text-lg italic font-light text-gray-500">“Komputer diciptakan untuk memecahkan masalah yang sebelumnya tidak ada.” — Bill Gates</blockquote>
+		</section>
 
+		<!-- Section Struktur Kelas -->
 		<section id="struktur" class="bg-gray-50 py-20 px-6">
 			<div class="container mx-auto text-center">
 				<h2 class="text-4xl font-bold mb-12 text-primary">Struktur Organisasi Kelas</h2>
@@ -170,7 +176,8 @@
 				</div>
 			</div>
 		</section>
-		<section id="anggota" class="min-h-screen bg-white py-20 px-6">
+		<!-- Section Anggota -->
+		<section id="anggota" class="min-h-screen bg-gray-50 py-20 px-6">
 			<div class="container mx-auto">
 				<h2 class="text-4xl font-bold text-center mb-12 text-primary">Anggota Kelas</h2>
 				<div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-5 gap-6">
@@ -291,7 +298,7 @@
 					<a href="#" class="hover:text-gray-300"><i class="ri-whatsapp-line"></i></a>
 				</div>
 			</div>
-			<footer class="text-center text-sm text-gray-500 mt-10 pb-6">&copy; 2025 Teknik Komputer A — Galeri Kelas</footer>
+			<footer class="text-center text-sm text-gray-500 mt-10 pb-6">&copy; 2025 Teknik Komputer A 2022 | R5 Program</footer>
 		</section>
 		<!-- Tombol Scroll to Top -->
 		<button id="scrollToTopBtn" onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="hidden fixed bottom-6 right-6 bg-primary text-white p-3 rounded-full shadow-md hover:bg-opacity-80 transition-all z-50">↑</button>
