--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
 		</section>
 		<section class="bg-white text-center py-16 px-6">
 			<blockquote class="max-w-2xl mx-auto text-lg italic font-light text-gray-500">“Komputer diciptakan untuk memecahkan masalah yang sebelumnya tidak ada.” — Bill Gates</blockquote>
+
+			<!-- Section Struktur Kelas -->
 		</section>
 
 		<!-- Section Struktur Kelas -->
