--- a/galeri.html
+++ b/galeri.html
@@ -3,46 +3,200 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Galeri Kelas</title>
-		<script src="https://cdn.tailwindcss.com/3.4.16"></script>
+		<title>Galeri Kelas Teknik Komputer A</title>
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="galeri.css" />
 	</head>
-	<body class="font-['Inter'] bg-gray-100 text-gray-800">
-		<header class="max-w-5xl mx-auto mt-6 px-4 flex justify-between items-center">
-			<h1 class="text-2xl font-bold text-primary">📸 Galeri Kelas</h1>
-			<a href="index.html#home" class="text-sm text-blue-600 hover:underline flex items-center gap-1"> <i class="ri-arrow-left-line"></i> Kembali ke Home </a>
+	<body>
+		<!-- Header -->
+		<header class="header">
+			<div class="logo">
+				<img src="img/380938694_1318676755440881_1850078113817887475_n.png" alt="Logo" />
+				<h1>Galeri Teknik Komputer A</h1>
+			</div>
+			<a href="index.html" class="back-btn">
+				<i class="ri-arrow-left-line"></i>
+				Kembali ke Home
+			</a>
 		</header>
-		<div class="list">
-			<img src="img/IMG_0018.jpg" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
-			<img src="img/IMG_0023.jpg" alt="" class="w-full h-auto object-cover rounded-lg shadow-md" />
-			<img src="img/IMG_0024.jpg" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
-			<img src="img/IMG_0025.jpg" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
-			<img src="img/IMG_1179.jpg" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
-			<img src="img/NUSTEL.IN_12.JPG" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
-			<img src="img/NUSTEL.IN_13.JPG" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
-			<video id="videoGaleri" class="rotate-landscape w-full object-cover rounded-lg shadow-md mb-6" src="img/0726.mp4" autoplay muted playsinline loop controls></video>
-			<img src="img/NUSTEL.IN_14.JPG" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
-			<img src="img/NUSTEL.IN_15.JPG" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
-			<img src="img/NUSTEL.IN_16.JPG" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
-			<img src="img/NUSTEL.IN_17.JPG" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
-			<img src="img/NUSTEL.IN_18.JPG" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
-			<img src="img/NUSTEL.IN_33.JPG" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
-			<video id="videoGaleri" class="rotate-landscape w-full object-cover rounded-lg shadow-md mb-6" src="img/WhatsApp Video 2025-07-22 at 21.24.18.mp4" autoplay muted playsinline loop controls></video>
-			<img src="img/NUSTEL.IN_49.JPG" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
-			<img src="img/NUSTEL.IN_71.JPG" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
-			<img src="img/WhatsApp Image 2025-01-14 at 19.09.18.jpeg" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
-			<img src="img/WhatsApp Image 2025-01-14 at 19.09.19.jpeg" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
-			<img src="img/WhatsApp Image 2025-04-27 at 11.06.56.jpeg" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
-			<img src="img/WhatsApp Image 2025-04-27 at 11.07.08 (1).jpeg" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
-			<img src="img/NUSTEL.IN_76.JPG" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
-			<img src="img/WhatsApp Image 2025-01-14 at 19.10.49.jpeg" alt="" class="w-full h-auto object-cover rounded-lg shadow-md mb-6" />
+
+		<!-- Gallery Container -->
+		<div class="gallery-container">
+			<div class="gallery-grid">
+				<!-- Image with description -->
+				<div class="gallery-item">
+					<img
+						src="img/IMG_0018.jpg"
+						alt="Kelas belajar"
+						data-title="Kelas Belajar"
+						data-description="Sesi belajar bersama di kelas pada mata kuliah Sistem Digital. Mahasiswa sedang menyelesaikan tugas praktikum bersama dosen pembimbing."
+					/>
+				</div>
+
+				<div class="gallery-item">
+					<img
+						src="img/IMG_0023.jpg"
+						alt="Diskusi kelompok"
+						data-title="Diskusi Kelompok"
+						data-description="Mahasiswa Teknik Komputer A sedang berdiskusi tentang proyek akhir mata kuliah Pemrograman Web. Diskusi berlangsung di ruang baca perpustakaan kampus."
+					/>
+				</div>
+
+				<div class="gallery-item">
+					<img
+						src="img/IMG_0024.jpg"
+						alt="Proyek komputer"
+						data-title="Presentasi Proyek"
+						data-description="Salah satu kelompok sedang mempresentasikan proyek robotika mereka di hadapan dosen dan teman-teman sekelas. Proyek ini meraih juara 2 dalam kompetisi internal."
+					/>
+				</div>
+
+				<div class="gallery-item">
+					<img
+						src="img/IMG_0025.jpg"
+						alt="Kegiatan outdoor"
+						data-title="Kegiatan Outdoor"
+						data-description="Kegiatan team building di luar kampus untuk mempererat hubungan antar mahasiswa Teknik Komputer A. Kegiatan ini diadakan setiap semester."
+					/>
+				</div>
+
+				<div class="gallery-item">
+					<img
+						src="img/IMG_1179.jpg"
+						alt="Praktikum Lab"
+						data-title="Praktikum Laboratorium"
+						data-description="Mahasiswa sedang melakukan praktikum jaringan komputer di laboratorium kampus. Praktikum ini merupakan bagian dari mata kuliah Jaringan Komputer Lanjut."
+					/>
+				</div>
+
+				<!-- Video with description -->
+				<div class="gallery-item">
+					<video
+						id="videoGaleri"
+						src="img/0726.mp4"
+						data-title="Workshop Pemrograman"
+						data-description="Video workshop pemrograman Python yang diadakan oleh kelas Teknik Komputer A. Workshop ini diikuti oleh 40 mahasiswa dan dipandu oleh alumni yang sekarang bekerja di perusahaan teknologi ternama."
+						loop
+						muted
+						autoplay
+						playsinline
+					></video>
+					<div class="video-indicator"><i class="ri-play-circle-line"></i> Video</div>
+				</div>
+
+				<div class="gallery-item">
+					<img
+						src="img/NUSTEL.IN_12.JPG"
+						alt="Kunjungan Industri"
+						data-title="Kunjungan Industri"
+						data-description="Kunjungan industri ke PT. Nusantara Telekomunikasi untuk melihat langsung penerapan teknologi jaringan modern. Kunjungan ini memberikan wawasan berharga tentang dunia kerja di bidang telekomunikasi."
+					/>
+				</div>
+
+				<div class="gallery-item">
+					<img
+						src="img/NUSTEL.IN_13.JPG"
+						alt="Seminar Teknologi"
+						data-title="Seminar Teknologi"
+						data-description="Mahasiswa Teknik Komputer A menjadi panitia dalam seminar nasional tentang perkembangan teknologi IoT. Acara ini dihadiri oleh lebih dari 200 peserta dari berbagai universitas."
+					/>
+				</div>
+
+				<div class="gallery-item">
+					<img
+						src="img/NUSTEL.IN_14.JPG"
+						alt="Pameran Proyek"
+						data-title="Pameran Proyek Akhir"
+						data-description="Pameran proyek akhir mahasiswa Teknik Komputer A yang diadakan di gedung serba guna kampus. Proyek-proyek inovatif dipamerkan kepada dosen, mahasiswa, dan tamu industri."
+					/>
+				</div>
+
+				<div class="gallery-item">
+					<img
+						src="img/NUSTEL.IN_15.JPG"
+						alt="Diskusi dengan Dosen"
+						data-title="Konsultasi dengan Dosen"
+						data-description="Sesi konsultasi proyek dengan dosen pembimbing. Mahasiswa mendapatkan bimbingan langsung untuk menyelesaikan proyek akhir mereka."
+					/>
+				</div>
+
+				<div class="gallery-item">
+					<img
+						src="img/NUSTEL.IN_16.JPG"
+						alt="Kegiatan Sosial"
+						data-title="Kegiatan Sosial"
+						data-description="Kegiatan sosial mahasiswa Teknik Komputer A di panti asuhan setempat. Kegiatan ini merupakan bagian dari program pengabdian masyarakat yang diadakan setiap tahun."
+					/>
+				</div>
+
+				<div class="gallery-item">
+					<img
+						src="img/NUSTEL.IN_17.JPG"
+						alt="Kompetisi Robotik"
+						data-title="Kompetisi Robotik"
+						data-description="Tim robotik Teknik Komputer A sedang mempersiapkan robot mereka untuk kompetisi tingkat nasional. Robot ini dirancang untuk menyelesaikan maze dalam waktu singkat."
+					/>
+				</div>
+
+				<div class="gallery-item">
+					<img
+						src="img/NUSTEL.IN_18.JPG"
+						alt="Belajar Bersama"
+						data-title="Belajar Bersama"
+						data-description="Sesi belajar bersama menjelang ujian akhir semester. Mahasiswa saling membantu memahami materi yang sulit di ruang baca kampus."
+					/>
+				</div>
+
+				<div class="gallery-item">
+					<img
+						src="img/NUSTEL.IN_33.JPG"
+						alt="Studi Lapangan"
+						data-title="Studi Lapangan"
+						data-description="Studi lapangan ke pusat data perusahaan teknologi untuk melihat infrastruktur server modern. Kunjungan ini memberikan gambaran nyata tentang pekerjaan di bidang IT."
+					/>
+				</div>
+
+				<!-- Another video -->
+				<div class="gallery-item">
+					<video
+						id="videoGaleri"
+						src="img/WhatsApp Video 2025-07-22 at 21.24.18.mp4"
+						data-title="Presentasi Proyek Akhir"
+						data-description="Video presentasi proyek akhir mata kuliah Sistem Tertanam. Mahasiswa mendemonstrasikan sistem monitoring suhu dan kelembaban berbasis IoT dengan antarmuka web real-time."
+						loop
+						muted
+						autoplay
+						playsinline
+					></video>
+					<div class="video-indicator"><i class="ri-play-circle-line"></i> Video</div>
+				</div>
+			</div>
 		</div>
-		<footer class="text-center text-sm text-gray-500 mt-10 pb-6">&copy; 2025 Teknik Komputer A — Galeri Kelas</footer>
 
-		<!-- Tombol Scroll ke Atas -->
-		<button id="scrollToTopBtn" class="hidden fixed bottom-6 right-6 bg-black text-white p-3 rounded-full shadow-md hover:bg-opacity-80 transition-all z-50 text-xl">↑</button>
+		<!-- Lightbox -->
+		<div class="lightbox">
+			<div class="lightbox-close">
+				<i class="ri-close-line"></i>
+			</div>
+			<div class="lightbox-content">
+				<div class="lightbox-media">
+					<!-- Media content will be inserted here -->
+				</div>
+				<div class="lightbox-info">
+					<h2 class="lightbox-title"></h2>
+					<p class="lightbox-description"></p>
+				</div>
+			</div>
+		</div>
 
+		<!-- Footer -->
+		<footer>&copy; 2025 Teknik Komputer A — Galeri Kelas</footer>
+
+		<!-- Scroll to top button -->
+		<div class="scroll-top">
+			<i class="ri-arrow-up-line"></i>
+		</div>
 		<script src="galeri.js"></script>
 	</body>
 </html>
