--- a/galeri.html
+++ b/galeri.html
@@ -12,7 +12,7 @@
 		<!-- Header -->
 		<header class="header">
 			<div class="logo">
-				<img src="img/380938694_1318676755440881_1850078113817887475_n.png" alt="Logo" />
+				<img src="img/380938694_1318676755440881_1850078113817887475_n.png" loading="lazy" alt="Logo" />
 				<h1>Galeri Teknik Komputer A</h1>
 			</div>
 			<a href="index.html" class="back-btn">
@@ -28,6 +28,7 @@
 				<div class="gallery-item">
 					<img
 						src="img/IMG_0018.jpg"
+						loading="lazy"
 						alt="Kelas belajar"
 						data-title="Kelas Belajar"
 						data-description="Sesi belajar bersama di kelas pada mata kuliah Sistem Digital. Mahasiswa sedang menyelesaikan tugas praktikum bersama dosen pembimbing."
@@ -37,6 +38,7 @@
 				<div class="gallery-item">
 					<img
 						src="img/IMG_0023.jpg"
+						loading="lazy"
 						alt="Diskusi kelompok"
 						data-title="Diskusi Kelompok"
 						data-description="Mahasiswa Teknik Komputer A sedang berdiskusi tentang proyek akhir mata kuliah Pemrograman Web. Diskusi berlangsung di ruang baca perpustakaan kampus."
@@ -46,6 +48,7 @@
 				<div class="gallery-item">
 					<img
 						src="img/IMG_0024.jpg"
+						loading="lazy"
 						alt="Proyek komputer"
 						data-title="Presentasi Proyek"
 						data-description="Salah satu kelompok sedang mempresentasikan proyek robotika mereka di hadapan dosen dan teman-teman sekelas. Proyek ini meraih juara 2 dalam kompetisi internal."
@@ -55,6 +58,7 @@
 				<div class="gallery-item">
 					<img
 						src="img/IMG_0025.jpg"
+						loading="lazy"
 						alt="Kegiatan outdoor"
 						data-title="Kegiatan Outdoor"
 						data-description="Kegiatan team building di luar kampus untuk mempererat hubungan antar mahasiswa Teknik Komputer A. Kegiatan ini diadakan setiap semester."
@@ -64,6 +68,7 @@
 				<div class="gallery-item">
 					<img
 						src="img/IMG_1179.jpg"
+						loading="lazy"
 						alt="Praktikum Lab"
 						data-title="Praktikum Laboratorium"
 						data-description="Mahasiswa sedang melakukan praktikum jaringan komputer di laboratorium kampus. Praktikum ini merupakan bagian dari mata kuliah Jaringan Komputer Lanjut."
@@ -88,6 +93,7 @@
 				<div class="gallery-item">
 					<img
 						src="img/NUSTEL.IN_12.JPG"
+						loading="lazy"
 						alt="Kunjungan Industri"
 						data-title="Kunjungan Industri"
 						data-description="Kunjungan industri ke PT. Nusantara Telekomunikasi untuk melihat langsung penerapan teknologi jaringan modern. Kunjungan ini memberikan wawasan berharga tentang dunia kerja di bidang telekomunikasi."
@@ -97,6 +103,7 @@
 				<div class="gallery-item">
 					<img
 						src="img/NUSTEL.IN_13.JPG"
+						loading="lazy"
 						alt="Seminar Teknologi"
 						data-title="Seminar Teknologi"
 						data-description="Mahasiswa Teknik Komputer A menjadi panitia dalam seminar nasional tentang perkembangan teknologi IoT. Acara ini dihadiri oleh lebih dari 200 peserta dari berbagai universitas."
@@ -106,6 +113,7 @@
 				<div class="gallery-item">
 					<img
 						src="img/NUSTEL.IN_14.JPG"
+						loading="lazy"
 						alt="Pameran Proyek"
 						data-title="Pameran Proyek Akhir"
 						data-description="Pameran proyek akhir mahasiswa Teknik Komputer A yang diadakan di gedung serba guna kampus. Proyek-proyek inovatif dipamerkan kepada dosen, mahasiswa, dan tamu industri."
@@ -115,6 +123,7 @@
 				<div class="gallery-item">
 					<img
 						src="img/NUSTEL.IN_15.JPG"
+						loading="lazy"
 						alt="Diskusi dengan Dosen"
 						data-title="Konsultasi dengan Dosen"
 						data-description="Sesi konsultasi proyek dengan dosen pembimbing. Mahasiswa mendapatkan bimbingan langsung untuk menyelesaikan proyek akhir mereka."
@@ -124,6 +133,7 @@
 				<div class="gallery-item">
 					<img
 						src="img/NUSTEL.IN_16.JPG"
+						loading="lazy"
 						alt="Kegiatan Sosial"
 						data-title="Kegiatan Sosial"
 						data-description="Kegiatan sosial mahasiswa Teknik Komputer A di panti asuhan setempat. Kegiatan ini merupakan bagian dari program pengabdian masyarakat yang diadakan setiap tahun."
@@ -133,6 +143,7 @@
 				<div class="gallery-item">
 					<img
 						src="img/NUSTEL.IN_17.JPG"
+						loading="lazy"
 						alt="Kompetisi Robotik"
 						data-title="Kompetisi Robotik"
 						data-description="Tim robotik Teknik Komputer A sedang mempersiapkan robot mereka untuk kompetisi tingkat nasional. Robot ini dirancang untuk menyelesaikan maze dalam waktu singkat."
@@ -142,6 +153,7 @@
 				<div class="gallery-item">
 					<img
 						src="img/NUSTEL.IN_18.JPG"
+						loading="lazy"
 						alt="Belajar Bersama"
 						data-title="Belajar Bersama"
 						data-description="Sesi belajar bersama menjelang ujian akhir semester. Mahasiswa saling membantu memahami materi yang sulit di ruang baca kampus."
@@ -151,6 +163,7 @@
 				<div class="gallery-item">
 					<img
 						src="img/NUSTEL.IN_33.JPG"
+						loading="lazy"
 						alt="Studi Lapangan"
 						data-title="Studi Lapangan"
 						data-description="Studi lapangan ke pusat data perusahaan teknologi untuk melihat infrastruktur server modern. Kunjungan ini memberikan gambaran nyata tentang pekerjaan di bidang IT."
