--- a/galeri.html
+++ b/galeri.html
@@ -82,6 +82,7 @@
 						src="img/0726.mp4"
 						data-title="Workshop Pemrograman"
 						data-description="Video workshop pemrograman Python yang diadakan oleh kelas Teknik Komputer A. Workshop ini diikuti oleh 40 mahasiswa dan dipandu oleh alumni yang sekarang bekerja di perusahaan teknologi ternama."
+						loading="lazy"
 						loop
 						muted
 						autoplay
@@ -177,6 +178,7 @@
 						src="img/WhatsApp Video 2025-07-22 at 21.24.18.mp4"
 						data-title="Presentasi Proyek Akhir"
 						data-description="Video presentasi proyek akhir mata kuliah Sistem Tertanam. Mahasiswa mendemonstrasikan sistem monitoring suhu dan kelembaban berbasis IoT dengan antarmuka web real-time."
+						loading="lazy"
 						loop
 						muted
 						autoplay
