--- a/galeri.html
+++ b/galeri.html
@@ -27,7 +27,7 @@
 				<!-- Image with description -->
 				<div class="gallery-item">
 					<img
-						src="img/IMG_0018.jpg"
+						src="img/IMG_0018.webp"
 						loading="lazy"
 						alt="Kelas belajar"
 						data-title="Kelas Belajar"
@@ -37,7 +37,7 @@
 
 				<div class="gallery-item">
 					<img
-						src="img/IMG_0023.jpg"
+						src="img/IMG_0023.webp"
 						loading="lazy"
 						alt="Diskusi kelompok"
 						data-title="Diskusi Kelompok"
@@ -47,7 +47,7 @@
 
 				<div class="gallery-item">
 					<img
-						src="img/IMG_0024.jpg"
+						src="img/IMG_0024.webp"
 						loading="lazy"
 						alt="Proyek komputer"
 						data-title="Presentasi Proyek"
@@ -57,7 +57,7 @@
 
 				<div class="gallery-item">
 					<img
-						src="img/IMG_0025.jpg"
+						src="img/IMG_0025.webp"
 						loading="lazy"
 						alt="Kegiatan outdoor"
 						data-title="Kegiatan Outdoor"
@@ -67,7 +67,7 @@
 
 				<div class="gallery-item">
 					<img
-						src="img/IMG_1179.jpg"
+						src="img/IMG_1179.webp"
 						loading="lazy"
 						alt="Praktikum Lab"
 						data-title="Praktikum Laboratorium"
@@ -93,7 +93,7 @@
 
 				<div class="gallery-item">
 					<img
-						src="img/NUSTEL.IN_12.JPG"
+						src="img/NUSTEL.IN_12.webp"
 						loading="lazy"
 						alt="Kunjungan Industri"
 						data-title="Kunjungan Industri"
@@ -103,7 +103,7 @@
 
 				<div class="gallery-item">
 					<img
-						src="img/NUSTEL.IN_13.JPG"
+						src="img/NUSTEL.IN_13.webp"
 						loading="lazy"
 						alt="Seminar Teknologi"
 						data-title="Seminar Teknologi"
@@ -113,7 +113,7 @@
 
 				<div class="gallery-item">
 					<img
-						src="img/NUSTEL.IN_14.JPG"
+						src="img/NUSTEL.IN_14.webp"
 						loading="lazy"
 						alt="Pameran Proyek"
 						data-title="Pameran Proyek Akhir"
@@ -123,7 +123,7 @@
 
 				<div class="gallery-item">
 					<img
-						src="img/NUSTEL.IN_15.JPG"
+						src="img/NUSTEL.IN_15.webp"
 						loading="lazy"
 						alt="Diskusi dengan Dosen"
 						data-title="Konsultasi dengan Dosen"
@@ -133,7 +133,7 @@
 
 				<div class="gallery-item">
 					<img
-						src="img/NUSTEL.IN_16.JPG"
+						src="img/NUSTEL.IN_16.webp"
 						loading="lazy"
 						alt="Kegiatan Sosial"
 						data-title="Kegiatan Sosial"
@@ -143,7 +143,7 @@
 
 				<div class="gallery-item">
 					<img
-						src="img/NUSTEL.IN_17.JPG"
+						src="img/NUSTEL.IN_17.webp"
 						loading="lazy"
 						alt="Kompetisi Robotik"
 						data-title="Kompetisi Robotik"
@@ -153,7 +153,7 @@
 
 				<div class="gallery-item">
 					<img
-						src="img/NUSTEL.IN_18.JPG"
+						src="img/NUSTEL.IN_18.webp"
 						loading="lazy"
 						alt="Belajar Bersama"
 						data-title="Belajar Bersama"
@@ -163,7 +163,7 @@
 
 				<div class="gallery-item">
 					<img
-						src="img/NUSTEL.IN_33.JPG"
+						src="img/NUSTEL.IN_33.webp"
 						loading="lazy"
 						alt="Studi Lapangan"
 						data-title="Studi Lapangan"
