--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		</nav>
 		<!-- Hero Section -->
 		<div id="hero" class="relative min-h-screen overflow-hidden">
-			<div class="absolute inset-0 bg-cover bg-center blur-bg" style="background-image: url('img/NUSTEL.IN_33.JPG')"></div>
+			<div class="absolute inset-0 bg-cover bg-center blur-bg" style="background-image: url('img/NUSTEL.IN_33.webp')"></div>
 			<div class="hero-gradient relative inset-0 pt-16">
 				<div class="container mx-auto px-4 h-screen flex flex-col justify-center items-center text-white relative z-10">
 					<h1 class="text-6xl font-bold mb-2 text-center">Teknik Komputer A</h1>
@@ -81,7 +81,7 @@
 
 						<!-- Gambar (mobile bawah, desktop kanan) -->
 						<div class="md:w-5/12 mt-6 md:mt-0 order-1 md:order-2">
-							<img src="img/NUSTEL.IN_12.JPG" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/NUSTEL.IN_12.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 					</div>
 
@@ -89,7 +89,7 @@
 					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
 						<!-- Gambar (mobile atas, desktop kiri) -->
 						<div class="md:w-5/12 order-2 md:order-1">
-							<img src="img/NUSTEL.IN_15.JPG" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/NUSTEL.IN_15.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 
 						<!-- Titik Tengah -->
@@ -114,7 +114,7 @@
 
 						<!-- Gambar (mobile bawah, desktop kanan) -->
 						<div class="md:w-5/12 mt-6 md:mt-0 order-1 md:order-2">
-							<img src="img/2022.jpg" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/2022.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 					</div>
 				</div>
@@ -134,7 +134,7 @@
 				<!-- Ketua -->
 				<div class="flex justify-center mb-12">
 					<div class="flex flex-col items-center">
-						<img src="img/ketua.jpg" alt="Ketua" class="w-24 h-24 rounded-full object-cover mb-2 border-4 border-primary" />
+						<img src="img/ketua.webp" alt="Ketua" class="w-24 h-24 rounded-full object-cover mb-2 border-4 border-primary" />
 						<h3 class="font-semibold text-lg">Ahmad Rizki</h3>
 						<p class="text-gray-600">Ketua</p>
 					</div>
@@ -143,22 +143,22 @@
 				<!-- Sekretaris, Wakil, Bendahara -->
 				<div class="grid grid-cols-2 md:grid-cols-4 gap-8 mb-12 justify-center">
 					<div class="flex flex-col items-center">
-						<img src="img/sek1.jpg" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
+						<img src="img/sek1.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
 						<h3 class="font-semibold text-sm">Raisa</h3>
 						<p class="text-gray-500 text-sm">Sekretaris 1</p>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="img/sek2.jpg" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
+						<img src="img/sek2.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
 						<h3 class="font-semibold text-sm">Iqbal</h3>
 						<p class="text-gray-500 text-sm">Sekretaris 2</p>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="img/wakil.jpg" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
+						<img src="img/wakil.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
 						<h3 class="font-semibold text-sm">Nina</h3>
 						<p class="text-gray-500 text-sm">Wakil Ketua</p>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="img/bendahara.jpg" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
+						<img src="img/bendahara.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
 						<h3 class="font-semibold text-sm">Taufik</h3>
 						<p class="text-gray-500 text-sm">Bendahara</p>
 					</div>
@@ -167,11 +167,11 @@
 				<!-- Anggota -->
 				<div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6">
 					<div class="flex flex-col items-center">
-						<img src="img/anggota1.jpg" class="w-16 h-16 rounded-full object-cover mb-2 border" />
+						<img src="img/anggota1.webp" class="w-16 h-16 rounded-full object-cover mb-2 border" />
 						<h3 class="text-sm font-medium">Dewi</h3>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="img/anggota2.jpg" class="w-16 h-16 rounded-full object-cover mb-2 border" />
+						<img src="img/anggota2.webp" class="w-16 h-16 rounded-full object-cover mb-2 border" />
 						<h3 class="text-sm font-medium">Fahmi</h3>
 					</div>
 					<!-- Tambah anggota lain sesuai kebutuhan -->
