--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
 						<!-- Konten (mobile kanan, desktop kiri) -->
 						<div class="md:w-5/12 md:text-right order-2 md:order-1 ml-10 md:ml-0">
 							<h3 class="text-xl font-bold mb-2 text-primary">Semester 1</h3>
-							<p class="text-gray-700">Awal mula perjalanan kami sebagai satu kelas. Belajar, adaptasi, dan mulai membangun kebersamaan.</p>
+							<p class="text-gray-700">
+								Awal mula perjalanan kami sebagai satu kelas. Pada awalnya kelas ini belum menjadi TK-A, tapi bermula dari TK-D, yang isinya orang - orang random yang belum tau kemana arah wkwkw..... Yaahhh tapi itulah awal bermula.
+							</p>
 						</div>
 
 						<!-- Titik Tengah -->
@@ -81,7 +83,7 @@
 
 						<!-- Gambar (mobile bawah, desktop kanan) -->
 						<div class="md:w-5/12 mt-6 md:mt-0 order-1 md:order-2">
-							<img src="img/NUSTEL.IN_12.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/1 (1).webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 					</div>
 
@@ -89,7 +91,7 @@
 					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
 						<!-- Gambar (mobile atas, desktop kiri) -->
 						<div class="md:w-5/12 order-2 md:order-1">
-							<img src="img/NUSTEL.IN_15.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/2.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 
 						<!-- Titik Tengah -->
@@ -98,7 +100,7 @@
 						<!-- Konten (mobile bawah, desktop kanan) -->
 						<div class="md:w-5/12 mt-6 md:mt-0 md:text-left ml-10 md:ml-0 order-1 md:order-2">
 							<h3 class="text-xl font-bold mb-2 text-primary">Semester 2</h3>
-							<p class="text-gray-700">Kami semakin erat, mulai aktif ikut lomba dan mengadakan kegiatan seru seperti buka puasa bersama dan kerja kelompok.</p>
+							<p class="text-gray-700">Kami semakin erat, belajar bersama, walaupun masih ada yang malu - malu kerbau. Tapi namanya juga baru semester 2 yak, jadi masih ada rasa - rasa sungkannya..</p>
 						</div>
 					</div>
 					<!-- ITEM SEMESTER 3 -->
@@ -106,7 +108,10 @@
 						<!-- Konten (mobile kanan, desktop kiri) -->
 						<div class="md:w-5/12 md:text-right order-2 md:order-1 ml-10 md:ml-0">
 							<h3 class="text-xl font-bold mb-2 text-primary">Semester 3</h3>
-							<p class="text-gray-700">Awal mula perjalanan kami sebagai satu kelas. Belajar, adaptasi, dan mulai membangun kebersamaan.</p>
+							<p class="text-gray-700">
+								Nahhh pada semester inilah Teknik Komputer A terbentuk, karena pada saat itu dilakukan perombakan kelas, karena TK-A yang dulu banyak yang "berhenti" kuliah karena alasan tertentu, jadinya dilakukanlah rolling, dna untungnya
+								TK-A yang dulu anggotanya dipencar ke kelas TK-D, TK-B, dan TK-C. Dan terbentuklah TK-A yang baru gitu.... Pinjem 100 bang.
+							</p>
 						</div>
 
 						<!-- Titik Tengah -->
@@ -114,7 +119,82 @@
 
 						<!-- Gambar (mobile bawah, desktop kanan) -->
 						<div class="md:w-5/12 mt-6 md:mt-0 order-1 md:order-2">
-							<img src="img/2022.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/IMG_0024.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
+						</div>
+					</div>
+					<!-- SEMESTER 4 -->
+					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
+						<!-- Gambar (mobile atas, desktop kiri) -->
+						<div class="md:w-5/12 order-2 md:order-1">
+							<img src="img/IMG_1179.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
+						</div>
+
+						<!-- Titik Tengah -->
+						<div class="w-6 h-6 bg-primary rounded-full border-4 border-white z-10 absolute left-4 md:left-1/2 transform md:-translate-x-1/2"></div>
+
+						<!-- Konten (mobile bawah, desktop kanan) -->
+						<div class="md:w-5/12 mt-6 md:mt-0 md:text-left ml-10 md:ml-0 order-1 md:order-2">
+							<h3 class="text-xl font-bold mb-2 text-primary">Semester 4</h3>
+							<p class="text-gray-700">
+								Semester 4, yang katanya semester tengah - tengah, ya bener sih, disinilah mulai bermunculan anomali project nyata dimulai dari project - project IOT dan yang lainnya, tapi tenang, bukan TK-A namanya kalau panik, kita mah
+								santai aja, karena setiap anggota punya skillnya masing masing, jadi aman aja sih, lulus dengan aman walaupun ada yang harus ngulang sih😑😑.
+							</p>
+						</div>
+					</div>
+					<!-- ITEM SEMESTER 5 -->
+					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
+						<!-- Konten (mobile kanan, desktop kiri) -->
+						<div class="md:w-5/12 md:text-right order-2 md:order-1 ml-10 md:ml-0">
+							<h3 class="text-xl font-bold mb-2 text-primary">Semester 5</h3>
+							<p class="text-gray-700">
+								Huuhhh semester 5, semester ini juga menjadi sebuah semester yang sangat berkesan, karena pada semester ini kami melakukan sebuah project yang sangat besar ada 2 buah project saat itu, Robot Avoider sama Robot Sumo, tapi
+								lagi lagi karena sudah terbiasa dengan project IOT, jadinya kami bisa mengerjakannya dengan baik hehe aman broooo......😅
+							</p>
+						</div>
+
+						<!-- Titik Tengah -->
+						<div class="w-6 h-6 bg-primary rounded-full border-4 border-white z-10 absolute left-4 md:left-1/2 transform md:-translate-x-1/2"></div>
+
+						<!-- Gambar (mobile bawah, desktop kanan) -->
+						<div class="md:w-5/12 mt-6 md:mt-0 order-1 md:order-2">
+							<img src="img/WhatsApp Image 2025-01-14 at 19.09.19.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
+						</div>
+					</div>
+					<!-- SEMESTER 6 -->
+					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
+						<!-- Gambar (mobile atas, desktop kiri) -->
+						<div class="md:w-5/12 order-2 md:order-1">
+							<img src="img/WhatsApp Image 2025-04-27 at 11.06.56.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
+						</div>
+
+						<!-- Titik Tengah -->
+						<div class="w-6 h-6 bg-primary rounded-full border-4 border-white z-10 absolute left-4 md:left-1/2 transform md:-translate-x-1/2"></div>
+
+						<!-- Konten (mobile bawah, desktop kanan) -->
+						<div class="md:w-5/12 mt-6 md:mt-0 md:text-left ml-10 md:ml-0 order-1 md:order-2">
+							<h3 class="text-xl font-bold mb-2 text-primary">Semester 6</h3>
+							<p class="text-gray-700">
+								Tidak nyangka sudah semester 6, disinilah kami memulai project yang lebih kompleks, yaitu Miniatur Lift 3 lantai dengan sesempurna mungkin. Project dimulai dari bulan puasa bro astagfirullah, tapi kami tetap semangat karena
+								dosen juga mengarahkan dengan sangat baik, memberikan solusi untuk setiap error, dan yahhh akhirnya kami bisa menyelesaikan project ini dengan baik, masih semangat brooo😑.
+							</p>
+						</div>
+					</div>
+					<!-- ITEM SEMESTER 7 -->
+					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
+						<!-- Konten (mobile kanan, desktop kiri) -->
+						<div class="md:w-5/12 md:text-right order-2 md:order-1 ml-10 md:ml-0">
+							<h3 class="text-xl font-bold mb-2 text-primary">Semester 7</h3>
+							<p class="text-gray-700">
+								<i>Perjalanan masih berlanjut.................😎</i>
+							</p>
+						</div>
+
+						<!-- Titik Tengah -->
+						<div class="w-6 h-6 bg-primary rounded-full border-4 border-white z-10 absolute left-4 md:left-1/2 transform md:-translate-x-1/2"></div>
+
+						<!-- Gambar (mobile bawah, desktop kanan) -->
+						<div class="md:w-5/12 mt-6 md:mt-0 order-1 md:order-2">
+							<img src="img/WhatsApp Image 2025-01-14 at 19.09.19.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 					</div>
 				</div>
